<resources>
    <string name="app_name">Movilidad Gdl</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string-array name="usuario">
        <item>Usuario1</item>
        <item>Usuario2</item>
        <item>Usuario3</item>
    </string-array>
    <string-array name="ids">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="user">Usuario</string>
    <string name="pass">Contraseña</string>
    <string name="fecha">Fecha</string>
    <string name="placas">Placas</string>
    <string name="vigencia">Vigencia</string>
    <string name="procedencia">Procedencia</string>
    <string name="marca">Marca</string>
    <string name="tipo">Tipo</string>
    <string name="color">Color</string>
    <string name="modelo">Modelo</string>
    <string name="datos_conductor">Datos del conductor</string>
    <string name="serie">Serie</string>
    <string name="nombre">Nombre</string>
    <string name="domicilio">Domicilio</string>
    <string name="colonia">Colonia</string>
    <string name="ciudad">Ciudad</string>
    <string name="a">A</string>
    <string name="ch">CH</string>
    <string name="o">O</string>
    <string name="mt">MT</string>
    <string name="tpf">TPF</string>
    <string name="ext">EXT</string>
    <string name="licencia">Licencia</string>
    <string name="tipo_licencia">Tipo licencia</string>
    <string name="datos_propi">Datos del propietario</string>
    <string name="datos_infra">Datos de la infracción</string>
    <string name="lugar">Lugar</string>
    <string name="hr">Hora</string>
    <string name="concepto">Concepto</string>
    <string name="garantia">Garantia</string>
    <string name="tc">TC</string>
    <string name="lic">LIC.</string>
    <string name="veh">VEH</string>
    <string name="invent">INVENT</string>
    <string name="articulo">Articulos</string>
    <string name="observaciones">Observaciones</string>
    <string name="title_activity_menu">Menu</string>
    <string name="multa">Multa</string>
    <string name="descarga_datos">Descarga de datos remoto</string>
    <string name="descarga_datos_c">Descarga de datos local</string>
    <string name="actualizar">Actualizar base de datos</string>
    <string name="guardar">Guardar</string>
    <string name="ap_paterno">Apellido paterno</string>
    <string name="ap_materno">Apellido Materno</string>
    <string name="title_connecting">connecting&#8230;</string>
    <string name="title_connected_to">connected to </string>
    <string name="title_not_connected">not connected</string>
    <string name="menu_connect_bluetooth">Connect (Bluetooth)</string>
    <string name="menu_connect_network">Connect (Network)</string>
    <string name="menu_connect_usb">Connect (USB)</string>
    <string name="menu_connect_wifi_p2p">Connect (Wi-Fi P2P)</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="alignment">Alignment</string>
    <string name="left_alignment">Left alignment</string>
    <string name="center_alignment">Center alignment</string>
    <string name="right_alignment">Right alignment</string>
    <string name="character_font">Character font</string>
    <string name="font_a">Font A</string>
    <string name="font_b">Font B</string>
    <string name="font_c">Font C</string>
    <string name="underline">Underline</string>
    <string name="underline_none">Underline none</string>
    <string name="underline_1dot_thick">Underline 1-dot thick</string>
    <string name="underline_2dot_thick">Underline 2-dot thick</string>
    <string name="emphasized">Emphasized</string>
    <string name="reverse">Reverse</string>
    <string name="horizontal_direction">Enlarged in horizontal direction</string>
    <string name="vertical_direction">Enlarged in vertical direction</string>
    <string name="print">Print</string>
    <string name="slogan">Our brand statement, \"A better solution for your business\" is derived from our key concept of our brand, \"Devotion\". This statement approaches our customers as the Business Printing Solution Expert, while maintaining the friendliness and welcoming brand image. The brand statement logo reflects the same principle by adopting a simple and minimalist font to express clear contrast and the strong borders on the frame to visualize firm, honest, and True Expert image. BIXOLON\'s brand statement logo acts as an important medium to convey our corporate image, thus the logo must maintain its form and color in all cases.</string>
    <string name="bar_code_system">Bar code system</string>
    <string name="upc_a">UPC-A</string>
    <string name="upc_e">UPC-E</string>
    <string name="ean13">EAN13</string>
    <string name="ean8">EAN8</string>
    <string name="code39">CODE39</string>
    <string name="itf">ITF</string>
    <string name="codabar">CODABAR</string>
    <string name="code93">CODE93</string>
    <string name="code128">CODE128</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="character_position">Character position</string>
    <string name="not_printed">Not printed</string>
    <string name="above_the_bar_code">Above the bar code</string>
    <string name="below_the_bar_code">Below the bar code</string>
    <string name="both_above_and_below_the_bar_code">Both above and below the bar code</string>
    <string name="data">Data</string>
    <string name="bar_code_width_hint">from 1 to 6</string>
    <string name="bar_code_height_hint">from 1 to 255</string>
    <string name="number2">2</string>
    <string name="number3">3</string>
    <string name="number162">162</string>
    <string name="upc_a_data">012345678905</string>
    <string name="homepage">http://www.bixolon.com</string>
    <string name="qrcode_model">QR Code model</string>
    <string name="model1">Model 1</string>
    <string name="model2">Model 2</string>
    <string name="size">Size</string>
    <string name="pdf417_width_hint">from 2 to 3</string>
    <string name="pdf417_height_hint">from 2 to 8</string>
    <string name="qrcode_size_hint">from 1 to 8</string>
    <string name="maxicode_mode">Mode for Maxi Code</string>
    <string name="mode2">Mode 2</string>
    <string name="mode3">Mode 3</string>
    <string name="mode4">Mode 4</string>
    <string name="datamatrix_size_hint">from 2 to 3</string>
    <string name="gallery">Gallery</string>
    <string name="content_description">contentDescription</string>
    <string name="number0">0</string>
    <string name="number100">100</string>
    <string name="number50">50</string>
    <string name="width_none">None</string>
    <string name="width_full">Full</string>
    <string name="level">Level</string>
    <string name="level_hint">from 13 to 88</string>
    <string name="ip">IP</string>
    <string name="port">Port</string>
    <string name="control_command">Control command</string>
    <string name="get_response">Get response</string>
    <string name="mode">Mode</string>
    <string name="standard_mode">Standard mode</string>
    <string name="page_mode">Page mode</string>
    <string name="print_direction">Print direction</string>
    <string name="degree_0">0-degree rotation</string>
    <string name="degree_90">90-degree rotation</string>
    <string name="degree_180">180-degree rotation</string>
    <string name="degree_270">270-degree rotation</string>
    <string name="horizontal_start_position">Horizontal start position</string>
    <string name="vertical_start_position">Vertical start position</string>
    <string name="horizontal_print_area">Horizontal print area</string>
    <string name="ip_a">IP Address</string>
    <string name="ip_f">IP Address FTP</string>
    <string name="actualizar_agentes">Actualizar Agentes</string>
    <string name="config_tab">Configurar tableta</string>
    <string name="actualizar_placas">Actualizar placas</string>
    <string name="busqueda">Busqueda</string>
    <string name="descuento">50 % DE DESCUENTO.</string>
    <string name="sanciones" formatted="false">La sanción por clave 5 goza de un 50 % de descuento asistiendo a un curso de Educación Vial impartida por la Dirección de Movilidad y Transporte de Guadalajara. Las claves 1,2,3 y 4 gozan de un 50 % de descuento,siempre y cuando se liquide dentro de los primeros 5 días hábiles siguiente a la fecha de infracción, según el artículo 75 Fracción VII, Apartado B, numeral 4 de la Ley de Ingresos del Municipio de Guadalajara, Jalisco, para el Ejercicio Fiscal 2019.</string>
    <string name="d_app">Descargar App</string>
    <string name="fot">Descargar fotografías</string>
    <string name="constitucion">CONSTITUCIÓN POLÍTICA DE LOS ESTADOS UNIDOS MEXICANOS:</string>
    <string name="constitucion1">Artículo 115 fracción II.- los municipios estarán investidos de personalidad jurídica y manejarán su patrimonio conforme a la ley. Los ayuntamientos tendrán facultades para aprobar, de acuerdo con las leyes en materia municipal que deberán expedir las legislaturas de los Estados, los bandos de Policía y Gobierno, los reglamentos, circulares y disposiciones administrativas de observancia general dentro de sus respectivas jurisdicciones, que organicen la administración pública municipal, regulen las materias, procedimientos, funciones y servicios públicos de su competencia y aseguren la participación ciudadana y vecinal.</string>
    <string name="consti_jal">CONSTITUCIÓN POLÍTICA DEL ESTADO DE JALISCO:</string>
    <string name="consti_jal1">Artículo 77 fracción II, Artículo 79 Fracción V.- Estacionamientos, Artículo 80 Fracción III.- Autorizar, controlar y vigilar la utilización del suelo jurisdicciones territoriales.</string>
    <string name="lpa">LEY DE PROCEDIMIENTO ADMINISTRATIVO DEL ESTADO DE JALISCO Y SUS MUNICIPIOS:</string>
    <string name="lpa1">En caso de desacuerdo del ciudadano podrá interponer recurso de revisión, artículos 133 al 141 o recursos de inconformidad, articulo 142 al 147</string>
    <string name="lmt">LEY DE MOVILIDAD Y TRANSPORTE DEL ESTADO DE JALISCO:</string>
    <string name="lmt1">Artículo 196.- Son autoridades competente en movilidad, para la calificación y la aplicación de las sanciones administrativas previstas: Fracción II.- en los Municipios los Presidentes municipales por conducto de la dependencia competente en materia de vialidad y tránsito; su personal operativo y los jueces municipales\n Artículo 197.- la ejecución de sanciones económicas se realizará conforme a las atribuciones y procedimientos que establezcan las leyes hacendarias y de ingresos aplicables a través de:\n I.- La Secretaría de Planeación, Administración y Finanzas y sus dependencias recaudadoras, y\nII.- Las Tesorerías Municipales y sus dependencias recaudadoras.</string>
    <string name="lugar3">Pague en: De lunes a viernes de 09:00 a 15:00 horas</string>
    <string name="pag">BANORTE</string>
    <string name="dir">Dir. de Movilidad y Transporte,</string>
    <string name="dir1">Dirección de Obras Publicas,</string>
    <string name="dir2">Tesorería Municipal,</string>
    <string name="dir3">Delegación Reforma,</string>
    <string name="dir4">Recaudadora Cruz del Sur,</string>
    <string name="dir_">Ghilardi S/N esq Miraflores</string>
    <string name="dir11">Hospital 50 y Esmeralda.</string>
    <string name="dir21">Miguel Blanco y Colón.</string>
    <string name="dir31">Antigua Central Camionera.</string>
    <string name="dir41">Av. Andrés de Urdaneta y Colon.</string>
    <string name="cep">Num. CEP: 27628</string>
    <string name="estacionamiento"></string>
    <string name="cla">BANORTE: claves de 1 a 8 Num. CEP: 27628 clave 9 Num. CEP: 56795</string>
    <string name="cep1"></string>
    <string name="unic1"></string>
    <string name="sincronizar_i">Sincronizar infracción</string>
    <string name="corregir_tableta">Corregir tableta</string>
    <string name="imprimir_ticket_linea">Imprimir ticket linea</string>
</resources>