<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    
    <RelativeLayout 
        android:id="@+id/relativeLayout11"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="5dp">
	    
	    <TextView 
	        android:id="@+id/tvNota1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/descuento"
	        android:textStyle="bold"
	        android:visibility="visible"/>
	    
	    <TextView 
	        android:id="@+id/tvNota2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/tvNota1"
	        android:text="@string/sanciones"
	        android:layout_marginTop="5dp"
	        android:visibility="visible"/>
	    
	    <LinearLayout 
	        android:id="@+id/llFund"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:layout_below="@id/tvNota2">
	    
		    <TextView 
		        android:id="@+id/tvNota3"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/constitucion"
		        android:layout_marginTop="5dp"
		        android:textStyle="bold"
		        android:textSize="13sp"
		        android:visibility="visible"/>
		    <TextView 
		        android:id="@+id/tvNota4"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/constitucion1"
		        android:layout_marginTop="5dp"
		        android:visibility="visible"/>
		    <TextView 
		        android:id="@+id/tvNota5"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/consti_jal"
		        android:textStyle="bold"
		        android:layout_marginTop="5dp"
		        android:visibility="visible"/>
		    <TextView 
		        android:id="@+id/tvNota6"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/consti_jal1"
		        android:layout_marginTop="5dp"
		        android:visibility="visible"/>
		    <TextView 
		        android:id="@+id/tvNota7"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lpa"
		        android:layout_marginTop="5dp"
		        android:textStyle="bold"
		        android:visibility="visible"/>
		    <TextView 
		        android:id="@+id/tvNota8"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lpa1"
		        android:layout_marginTop="5dp"
		        android:visibility="visible"/>
		    <TextView 
		        android:id="@+id/tvNota9"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lmt"
		        android:layout_marginTop="5dp"
		        android:textStyle="bold"
		        android:visibility="visible"/>
		    <TextView 
		        android:id="@+id/tvNota10"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:text="@string/lmt1"
		        android:layout_marginTop="5dp"
		        android:visibility="visible"/>
	    
	    </LinearLayout>
	    
	    <TableLayout 
	        android:id="@+id/tl1"
	        android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:stretchColumns="1"
		    android:layout_below="@+id/llFund"
		    android:layout_marginTop="10dp">
		    
	        <TableRow 
	            android:id="@+id/tableRow1"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">
		    
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/lugar3"
		            android:textSize="13sp"
		            android:textStyle="bold"
		            android:layout_span="2"/>
		        
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            android:text="@string/pag"/>
	        
	        </TableRow>
	        
	        <TableRow 
	            android:id="@+id/tableRow2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content">
		    
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/dir"
		            android:textSize="13sp"/>
		        
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            android:textStyle="bold"
		            android:text="@string/dir_"/>
		        
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            android:textStyle="bold"
		            android:text="@string/cep"/>
	        
	        </TableRow>
	        
	        <TableRow 
	            android:id="@+id/tableRow3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content">
		    
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/dir1"
		            android:textSize="13sp"/>
		        
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            android:textStyle="bold"
		            android:text="@string/dir11"/>
		        
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            android:text="@string/estacionamiento"/>
	        
	        </TableRow>
	        
	        <TableRow 
	            android:id="@+id/tableRow4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content">
		    
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/dir2"
		            android:textSize="13sp"/>
		        
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            android:textStyle="bold"
		            android:text="@string/dir21"/>
		        
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            android:text="@string/cla"/>
	        
	        </TableRow>
	        
	        <TableRow 
	            android:id="@+id/tableRow5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content">
		    
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/dir3"
		            android:textSize="13sp"/>
		        
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            android:textStyle="bold"
		            android:text="@string/dir31"/>
		        
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            android:text="@string/cep1"/>
	        
	        </TableRow>
	        
	        <TableRow 
	            android:id="@+id/tableRow6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content">
		    
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/dir4"
		            android:textSize="13sp"/>
		        
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            android:textStyle="bold"
		            android:text="@string/dir41"/>
		        
		        <TextView 
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content" 
		            android:text="@string/unic1"/>
	        
	        </TableRow>
	        
	    </TableLayout>
	    
	</RelativeLayout>
    

</ScrollView>
