<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pgm.transito.LoginActivity" >

    <!-- Login progress -->

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_gravity="center_vertical" >
            
        	<RelativeLayout 
        	    android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:orientation="vertical">
        	    
	            <TextView android:id="@+id/tvVersion"
	            	android:layout_width="wrap_content"
	            	android:layout_height="wrap_content" />
            
            </RelativeLayout>
            
            <RelativeLayout 
                android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical">
                
                <ImageView 
			        android:id="@+id/ivLogo"
			        android:layout_width="300dp"
			        android:layout_height="150dp"
			        android:src="@drawable/log_movilidad"
			        android:contentDescription="@string/a"
			        android:layout_centerHorizontal="true"
			        android:visibility="visible"/>
                
                <ImageView 
			        android:id="@+id/ivLogo1"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:src="@drawable/logo_png"
			        android:contentDescription="@string/a"
			        android:layout_alignParentRight="true"
			        android:visibility="visible"/>
                
            </RelativeLayout>
            
            <LinearLayout android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_marginTop="20dp">
	            
                <TextView 
                    android:layout_height="wrap_content"
                    android:layout_width="0px"
                    android:text="@string/user"
                    android:layout_weight="2"
                    android:gravity="center"/>
                
                <Spinner 
                    android:id="@+id/spUser"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"/>
                
            </LinearLayout>
            
            <LinearLayout android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:layout_marginTop="@dimen/activity_vertical_margin">
	            
                <TextView 
                    android:layout_height="wrap_content"
                    android:layout_width="0px"
                    android:text="@string/pass"
                    android:layout_weight="2"
                    android:gravity="center"/>
                
                <EditText 
                    android:id="@+id/etPass"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    android:inputType="textPassword"/>
                
            </LinearLayout>

            <!-- <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
                 -->

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@android:string/ok"
                android:textStyle="bold" />
            
            <RelativeLayout 
                android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:orientation="vertical"
            	android:gravity="center_horizontal" >
            
	            <TextView 
	                android:id="@+id/tvNombre" 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginTop="50dp"
	                android:textSize="14sp" />
	            
	        </RelativeLayout>
            
        </LinearLayout>
        
    </ScrollView>
    
    

</LinearLayout>
